# aion

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
hooks/: post-commit
src/aion/: __init__.py  cli.py  delivery.py  server.py  store.py
src/aionai/: __init__.py  cli.py  delivery.py  server.py  store.py
tests/: test_store.py
